--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             <h2 class="textindent">Hi</h2>
                 <h1 class="textindent" style="font-size: 30px">I'm<span class="special">Mahaboob</span></h1>
                 <h1 class="textindent" style="font-size: 30px">a Frontend Developer</h1><br>
-                <p class="textindent" style="font-family:sans-serif;"> I am Mahaboob Basha. I am currently pursuing my bachelor of technology(B.Tech)</p>
-                <p class="textindent" style="font-family:sans-serif;">in computer science and engineering at SVR engineering collage</p>
-                <p class="textindent" style="font-family:sans-serif;">(Nandyal,AndhraPradesh,india) My shortterm goal is to get a job in software industry.</p>
+                <p class="textindent" style="font-family:sans-serif;"> I am Mahaboob Basha. I am currently pursuing my</p>
+                <p class="textindent" style="font-family:sans-serif;"> bachelor of technology(B.Tech)in computer science</p>
+                <p class="textindent" style="font-family:sans-serif;"> and engineering at SVR engineering collage</p>
+                <p class="textindent" style="font-family:sans-serif;"> (Nandyal,AndhraPradesh,india) My shortterm goal is</p>
+                <p class="textindent" style="font-family:sans-serif;"> to get a job in software industry.</p>
                     <br>
         </section> <br>
 
