--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
             <br>
             <br><br>
             <br>
-            <img src="pic.jpg" height="350px" width="350px">
+            <img src="pic.jpg" height="300px" width="300px">
             <br>
         
             <h2 class="textindent">Hi</h2>
                 <h1 class="textindent" style="font-size: 30px">I'm<span class="special">Mahaboob</span></h1>
-                <h1 class="textindent" style="font-size: 30px">a Frontend Developer</h1><br>
-                <p class="textindent" style="font-family:sans-serif;"> I am Mahaboob Basha. I am currently pursuing my</p>
-                <p class="textindent" style="font-family:sans-serif;"> bachelor of technology(B.Tech)in computer science</p>
-                <p class="textindent" style="font-family:sans-serif;"> and engineering at SVR engineering collage</p>
-                <p class="textindent" style="font-family:sans-serif;"> (Nandyal,AndhraPradesh,india) My shortterm goal is</p>
-                <p class="textindent" style="font-family:sans-serif;"> to get a job in software industry.</p>
+                <h1 class="textindent" style="font-size: 30px;">a Frontend Developer</h1><br>
+                <h5 class="textindent" style="font-family:sans-serif;"> I'm mahaboob Basha. I am currently pursuing my</h5>
+                <h5 class="textindent" style="font-family:sans-serif;">bachelor of technology(B.Tech)in computer science</h5>
+                <h5 class="textindent" style="font-family:sans-serif;">and engineering at SVR engineering collage</h5>
+                <h5 class="textindent" style="font-family:sans-serif;">(Nandyal,AndhraPradesh,india) My shortterm goal is</h5>
+                <h5 class="textindent" style="font-family:sans-serif;">to get a job in software industry.<h5>
                     <br>
         </section> <br>
 
             <div class="btn-box">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="about.html"><button class="btn-1">About Me</button></a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="about.html"><button class="btn-1">About Me</button></a>
                 <a href="resume.html"><button class="btn-2">See Resume</button> </a>
             </div>
             
