--- a/certificates.html
+++ b/certificates.html
@@ -39,7 +39,7 @@
     <img src="igot.jpg" height="400px" width="400px" style="float: right; margin-right: 150px;">
     &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u><h1 style="color:indigo;">COURSES</h1></u>
         <ul type="disc">
-            <li style="color: rgba(14, 14, 99, 0.349);">PYTHON FUNDAMENTALS FOR BEGINNERS</li>
+            <li style="color:blue;">PYTHON FUNDAMENTALS FOR BEGINNERS</li>
             <a href="pythonfundamentals.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</p></a>
             <li style="color:brown;">FRONTEND DEVELOPMENT</li>
             <a href="frontenddevelopment.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</p></a>
