--- a/certificates.html
+++ b/certificates.html
@@ -25,10 +25,20 @@
     }
     li{
         font-size: 26px;
+        font-family:'Arial Narrow Bold';
 
     }
     body{
+        background-color:rgb(0, 255,255);
+    }
+    button{
+        color:white;
+        background-color: blue;
+    
+    }
+    button:hover{
         background-color: white;
+        color: black;
     }
     </style>
 </head>
@@ -39,22 +49,22 @@
     <img src="igot.jpg" height="400px" width="400px" style="float: right; margin-right: 150px;">
     &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u><h1 style="color:indigo;">COURSES</h1></u>
         <ul type="disc">
-            <li style="color:blue;">PYTHON FUNDAMENTALS FOR BEGINNERS</li>
-            <a href="pythonfundamentals.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</p></a>
-            <li style="color:brown;">FRONTEND DEVELOPMENT</li>
-            <a href="frontenddevelopment.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</p></a>
-            <li style="color: rgb(0, 116, 25)";>CSS TUTORIAL</li>
-            <a href="csstutorial.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</p></a>
-            <li style="color: #a00050";>DATASCIENCE FOUNDATIONS</li>
-            <a href="datasciencefoundations.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</p></a>
+            <li style="color:rgb(151, 20, 151)"><b>PYTHON FUNDAMENTALS FOR BEGINNERS</b></li>
+            <a href="pythonfundamentals.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;"><button type="button">see certificate</button></p></a>
+            <li style="color:brown;"><b>FRONTEND DEVELOPMENT</b></li>
+            <a href="frontenddevelopment.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;"><button type="button">see certificate</button></p></a>
+            <li style="color: rgb(0, 116, 25)";><b>CSS TUTORIAL</b></li>
+            <a href="csstutorial.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;"><button type="button">see certificate</button></p></a>
+            <li style="color: #a00050";><b>DATASCIENCE FOUNDATIONS</b></li>
+            <a href="datasciencefoundations.jpg"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;"><button type="button">See certificate</button></p></a>
      </ul><br><br>
     </div>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u><h1 style="color: chocolate;">INTERNSHIPS</h1></u>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h2 style="font-family: 'Times New Roman'; font-size: 30px;">I am successfully completed the Below Internship in eduskills academy</h3>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h2 style="font-family: 'Times New Roman'; font-size: 30px; color: coral;">I am successfully completed the Below Internship in AWS Academy</h3>
     <img src="edu.jpg" height="250px" width="250px">
     <ul type="disc">
-        <li style="color: rgb(72, 121, 0);">AWS CLOUD VIRTUAL INTERNSHIP</li>
-        <a href="eduskills.pdf"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;">see certificate</a></p>
+        <li style="color: rgb(72, 121, 0);"><b>AWS CLOUD VIRTUAL INTERNSHIP</b></li>
+        <a href="eduskills.pdf"><p style="font-family: 'Times New Roman', Times, serif;font-size: 23px;"><button type="button">see certificate</button></a></p>
     <div>
 
     </div>
