--- a/education.html
+++ b/education.html
@@ -7,13 +7,15 @@
     <style type="text/css">
         body{
             text-indent: 100px;
-        }
+            background-color:rgb(0, 255,255);
+        };
+        
     </style>
 </head>
 <body>
     <br><br>
     <br><br>
-    <h1 style="text-indent: 50px; font-family: 'Times New Roman', Times, serif;color: firebrick;">I have the following  Educational Qualifications</h1>
+    <h1 style="text-indent: 50px; font-family: 'Times New Roman', Times, serif;color: firebrick;"><b>I have the following  Educational Qualifications</b></h1>
     <U><h2 style="color: blue;">EDUCATIONAL DETAILS</h2></U> 
     <ul type="disc"></ul>
         <li style="font-family: 'Times New Roman';font-size: 20px;">SVR Engineering Collage Nandyal</li>
