--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,7 @@
             margin: 20px;
             margin-top: 0px;
         }
+       
     </style>
 </head>
 <body>
@@ -41,12 +42,12 @@
         <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">BTech in computer Science
             81%
         </p>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">SSC junior Collage</li>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">SSS junior Collage</li>
         <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Intermediate
             94%
         </p>
         <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">ZPHS School palukuru</li>
-        <p>SCC
+        <p>SSC
             10 CGPA
         </p>
      <ul>
