--- a/skills.html
+++ b/skills.html
@@ -9,16 +9,20 @@
             text-indent: 25px;
         }
         button{
-        background-color:blue;
+        background-color:orangered;
          color:white;
          width: 80px;
          border-radius: 5px;
 
         }
         button:hover{
-            background-color: green;
+            background-color: blue;
             color: black;
         }
+        body{
+            background-color:rgb(0, 255,255);
+    }
+        
     </style>
 </head>
 <body><div>
@@ -44,7 +48,7 @@
 <p style="font-size: 20px;"> I got a course completion certificate from the Telugu Webguru Academy
 As a Python Fullstack Developer</p>
 
-<p><b>Click the below link to see the certificate</b></p>
+<p style="font-family:  Arial, sans-serif;font-size: 15px;"><b>Click the below link to see the certificate</b></p>
 
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="twg.pdf"><button>Click Here</button></a> 
 </div>
