--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 font-size: 25px;
                 color: cyan;
             }body{
-                background-color:white;
+                background-color:rgb(0, 255, 255);
             }
             img{
                 border-radius: 300px;
