--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
         
             <h2 class="textindent">Hi</h2>
                 <h1 class="textindent" style="font-size: 30px">I'm<span class="special">Mahaboob</span></h1>
-                <h1 class="textindent" style="font-size: 30px;">a Frontend Developer</h1><br>
-                <h5 class="textindent" style="font-family:sans-serif;"> I'm mahaboob Basha. I am currently pursuing my</h5>
-                <h5 class="textindent" style="font-family:sans-serif;">bachelor of technology(B.Tech)in computer science</h5>
-                <h5 class="textindent" style="font-family:sans-serif;">and engineering at SVR engineering collage</h5>
-                <h5 class="textindent" style="font-family:sans-serif;">(Nandyal,AndhraPradesh,india) My shortterm goal is</h5>
-                <h5 class="textindent" style="font-family:sans-serif;">to get a job in software industry.<h5>
+                <h1 class="textindent" style="font-size: 30px;">a Python Fullstack Developer</h1><br>
+                <h5> I'm passionate python fullstack developer</h5>
+                <h5> I have the required knowledge</h5>
+                <h5> for the development of Website.</h5>
+                <h5> I am interestd to design interactive
+                <h5> Web applications</h5>
+
                     <br>
         </section> <br>
 
             <div class="btn-box">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="about.html"><button class="btn-1">About Me</button></a>
-                <a href="resume.html"><button class="btn-2">See Resume</button> </a>
+                &nbsp;&nbsp;&nbsp;&nbsp;<a href="about.html"><button class="btn-1">About Me</button></a>
+                <a href="resume.html" download="resume.html.pdf"><button class="btn-2">See Resume</button> </a>
             </div>
             
         </section>
