--- a/skills.html
+++ b/skills.html
@@ -22,10 +22,16 @@
         body{
             background-color:rgb(0, 255,255);
     }
+
+
+    
+
         
     </style>
 </head>
-<body><div>
+<body>
+    <a href="index.html" style="float: right;"><button type="button" class="hello" >Home</button></div></a>
+    <div>
     <u><h1 style="text-align: center; color:rgb(141, 9, 9);">skills</h1></u>
     <u><h2 style="color: crimson;">My skills & Experiences</h2></u>
     <ul type="disc">
