--- a/certificates.html
+++ b/certificates.html
@@ -29,7 +29,7 @@
 
     }
     body{
-        background-color:rgb(0, 255,255);
+        background-color: white;
     }
     button{
         color:white;
@@ -40,9 +40,16 @@
         background-color: white;
         color: black;
     }
+    .hello{
+        float: right;
+        margin-right: 50px;
+        margin-top: 0px;
+    }
     </style>
 </head>
-<body><div>
+<body>
+    <a href="index.html"><button type="button" class="hello">Home</button></div></a>
+    <div>
     
     <h3 style="font-family: 'Times New Roman'; font-size: 30px;">I am successfully completed the following courses in greate learning academy</h3>
     <img src="great.png" height="250px" width="250px">
