--- a/education.html
+++ b/education.html
@@ -8,11 +8,25 @@
         body{
             text-indent: 100px;
             background-color:rgb(0, 255,255);
-        };
+        }
+        p{
+            color:black;
+        }
+        .hello{
+            float: right;
+            margin-right: 50px;
+            color: white;
+            background-color: orangered;
+        }
+        .hello:hover{
+            background-color: white;
+            color: black;
+        }
         
     </style>
 </head>
 <body>
+    <a href="index.html"><button type="button" class="hello">Home</button></div></a>
     <br><br>
     <br><br>
     <h1 style="text-indent: 50px; font-family: 'Times New Roman', Times, serif;color: firebrick;"><b>I have the following  Educational Qualifications</b></h1>
