--- a/certificates.html
+++ b/certificates.html
@@ -29,11 +29,11 @@
 
     }
     body{
-        background-color: white;
+        background-color:blue;
     }
     button{
         color:white;
-        background-color: blue;
+        background-color:orangered;
     
     }
     button:hover{
