--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
     <style type="text/css">
         body{
             text-indent: 100px;
-            background-color:rgb(0, 255,255);
+            background-color:rgba(0, 0, 255, 0.603);
         }
         p{
             color:black;
@@ -30,20 +30,19 @@
     <br><br>
     <br><br>
     <h1 style="text-indent: 50px; font-family: 'Times New Roman', Times, serif;color: firebrick;"><b>I have the following  Educational Qualifications</b></h1>
-    <U><h2 style="color: blue;">EDUCATIONAL DETAILS</h2></U> 
+    <h2 style="color: white;font-size: 40px;font-family: 'Times New Roman', Times, serif;">EDUCATIONAL DETAILS</h2>
     <ul type="disc"></ul>
-        <li style="font-family: 'Times New Roman';font-size: 20px;">SVR Engineering Collage Nandyal</li>
-        <p style="font-family: 'Times New Roman';font-size: 20px;">(2022-2026),BTech in computer Science and Engineering
+        <li style="font-family: 'Times New Roman';font-size: 20px;color: white;">SVR Engineering Collage Nandyal</li>
+        <p style="font-family: 'Times New Roman';font-size: 20px;color: white;">(2022-2026),BTech in computer Science and Engineering
             81%
         </p>
-        <li style="font-family: 'Times New Roman';font-size: 20px;">Sri Sai Sidhardha junior Collage</li>
-        <p style="font-family: 'Times New Roman';font-size: 20px;">(2020-2022),Intermediate MPC
+        <li style="font-family: 'Times New Roman';font-size: 20px;color: white;">Sri Sai Sidhardha junior Collage</li>
+        <p style="font-family: 'Times New Roman';font-size: 20px;color: white;">(2020-2022),Intermediate MPC
             94%
         </p>
-        <li style="font-family: 'Times New Roman';font-size: 20px;">(2020),ZPHS School palukuru</li>
-        <p>SCC
-            10 CGPA
-        </p>
+        <li style="font-family: 'Times New Roman';font-size: 20px;color: white;">(2020),ZPHS School palukuru</li><br>
+        <li style="font-family: 'Times New Roman';font-size: 20px;color: white;">SCC 10 CGPA</li>
+        
      <ul>
     
 </body>
