--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style type="text/css">
         h1{
-            background-color: chocolate;
+            background-color:coral;
 
         }
         h1{
@@ -16,6 +16,7 @@
         body{
             border: 2px solid green;
             border-radius: 10px;
+            background-color:rgba(0, 0, 255, 0.774);
         }
         *
         {
@@ -27,53 +28,51 @@
 </head>
 <body>
     <div>
-        <h1>RESUME</h1>
+        <h1 style="color: white;">RESUME</h1>
     </div>
-    <h2>SHAIK MAHABOOB BASHA</h2>
-    <P>22am1a0552@svrec.ac.in |Ph:9160162141</P>
-    <h2>CAREER OBJECTIVE</h2>
+    <h2 style="color: white;">SHAIK MAHABOOB BASHA</h2>
+    <P style="color: white;">22am1a0552@svrec.ac.in |Ph:9160162141</P>
+    <h2 style="color: white;">CAREER OBJECTIVE</h2>
     <hr>
-    <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">To become a successfull expert in the field of computer science and engineering with estimated organization that provide 
+    <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">To become a successfull expert in the field of computer science and engineering with estimated organization that provide 
         me an oppurtunity to prove my skills and improve knowledge.
     </p><br>
-    <h2>EDUCATION</h2>
+    <h2 style="color: coral;">EDUCATION</h2>
     <ul type="disc"></ul>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">SVR Engineering Collage</li>
-        <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">BTech in computer Science
-            81%
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">SVR Engineering Collage</li>
+        <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">BTech in computer Science
+            <p style="color:white;">81%</p>
         </p>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">SSS junior Collage</li>
-        <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Intermediate
-            94%
-        </p>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">ZPHS School palukuru</li>
-        <p>SSC
-            10 CGPA
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">SSS junior Collage</li>
+        <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Intermediate
+            <p style="color:white;">94%</p>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">ZPHS School palukuru</li>
+            <p style="color:white;">SSC 10CGPA</p>
         </p>
      <ul>
-    <h2 style="font-family: 'Times New Roman', Times, serif;font-size: 20px;margin-left: 0px;">TECHNICAL SKILLS</h2>
+    <h2 style="font-family: 'Times New Roman', Times, serif;font-size: 20px;margin-left: 0px;color: white;">TECHNICAL SKILLS</h2>
     <hr>
-    <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Programming Languages :C,python,basics of java,HTML,CSS,JS,DJANGO,SQL</li>
-    <li>DBMS</li>
+    <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Programming Languages :C,python,basics of java,HTML,CSS,JS,DJANGO,SQL</li>
+    <li style="color: white;">DBMS</li>
     </ul>
-    <h2>CERTIFICATIONS</h2>  
+    <h2 style="color: coral;">CERTIFICATIONS</h2>  
     <hr>
     <ul type="disc">
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Certified in great learning academy Python undamentals for Beginners</li>
-        <li >Certified in great learning academy Frontend Development-HTML</li>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Certified in great learning academy CSS Tutorial</li>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Certified in great learning academy Data Science Foundations</li>
-        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">certified from Telugu Webguru Academy as a Python Fullstack Developer</li>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Certified in great learning academy Python undamentals for Beginners</li>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Certified in great learning academy Frontend Development-HTML</li>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Certified in great learning academy CSS Tutorial</li>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Certified in great learning academy Data Science Foundations</li>
+        <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">certified from Telugu Webguru Academy as a Python Fullstack Developer</li>
     </ul>
-        <h2>PERSONAL DETAILS</h2>
+        <h2 style="color: coral;">PERSONAL DETAILS</h2>
         <hr>
         <ul type="circle">
-            <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Date Of Birth:04 sept 2004</li>
-            <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">Languages Known:English,Telugu</li>
+            <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Date Of Birth:04 sept 2004</li>
+            <li style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">Languages Known:English,Telugu</li>
          </ul>
-         <h2>DECLARATION</h2>
+         <h2 style="color: coral;">DECLARATION</h2>
          <hr>
-         <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;">I hereby declare that the above mentioned information is correct up to my knowledge
+         <p style="font-family: 'Times New Roman', Times, serif;font-size: 20px;color: white;">I hereby declare that the above mentioned information is correct up to my knowledge
              and I bear the responsibility for the correctness of above mentioned particulars</p>   
         
 
